# ztcli

./: .gitignore  Cargo.toml  Justfile  openapi.yaml  rustfmt.toml
.github/workflows/: build.yaml  checks.yaml
src/: cli.rs  main.rs  ztapi.rs
