[package]
name = "ztcli"
version = "0.1.0"
edition = "2024"
authors = ["Koito Coco <koitococo@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Third-party ZeroTier CLI for managing networks and nodes, maybe more powerful than the official one."
repository = "https://github.com/koitococo/ztcli"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive", "env"] }
clap_complete = "4.5.55"
dotenvy = { version = "0.15.7" }
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.22", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros", "rt"] }
url = "2.5.4"
