[package]
name = "ztcli"
version = "0.3.0"
edition = "2024"
authors = ["Koito Coco <koitococo@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Third-party ZeroTier CLI for managing networks and nodes, maybe more powerful than the official one."
repository = "https://github.com/koitococo/ztcli"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive", "env"] }
dotenvy = { version = "0.15.7" }
env_logger = { version = "0.11.8", default-features = false }
log = "0.4.27"
reqwest = { version = "0.12.22", default-features = false }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = [
  "fs",
  "macros",
  "rt",
], default-features = false }
url = { version = "2.5.4", default-features = false }

clap_complete = { version = "4.5.55", optional = true }
clap_usage = { version = "2.0.3", optional = true }

[features]
default = []
completions = ["clap_complete", "clap_usage"]
